k8s/backend/measurement-result/measurement-result-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measurement-result-api-depl
  namespace: backend-api
spec:
  selector:
    matchLabels:
      app: measurement-result-api-depl
  template:
    metadata:
      labels:
        app: measurement-result-api-depl
    spec:
      containers:
        - name: measurement-result-api-depl
          image: CONTAINER_REPO/measurement-result-api
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: 10m
              memory: "80Mi"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
