k8s/backend/measurement-result/measurement-result-api-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: measurement-result-api-srv
  namespace: backend-api
spec:
  selector:
    app: measurement-result-api-depl
  ports:
  - port: 3000
    targetPort: 3000
