k8s/backend/measurement-result/measurement-result-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: measurement-result-api-route
  namespace: backend-api
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`api.synthia.tech`) && PathPrefix(`/measurement/api/docs`)
    kind: Rule
    middlewares:
      - name: default-rate-limit-middleware
        namespace: default
      - name: backend-api-strip-prefix-middleware
        namespace: backend-api
      - name: admin-basic-auth-middleware
        namespace: traefik
    services:
    - name: measurement-result-api-srv
      namespace: backend-api
      kind: Service
      port: 3000
  - match: Host(`api.synthia.tech`) && PathPrefix(`/measurement/api/healthcheck`))
    kind: Rule
    middlewares:
      - name: common-headers-middleware
        namespace: default
      - name: default-rate-limit-middleware
        namespace: default
      - name: backend-api-strip-prefix-middleware
        namespace: backend-api
    services:
    - name: measurement-result-api-srv
      namespace: backend-api
      kind: Service
      port: 3000
  - match: Host(`api.synthia.tech`) && PathPrefix(`/measurement/api`)
    kind: Rule
    middlewares:
      - name: common-headers-middleware
        namespace: default
      - name: default-rate-limit-middleware
        namespace: default
      - name: heimdall-auth-middleware
        namespace: heimdall
      - name: backend-api-strip-prefix-middleware
        namespace: backend-api
    services:
    - name: measurement-result-api-srv
      namespace: backend-api
      kind: Service
      port: 3000
  tls:
    secretName: backend-api-tls
    domains: 
    - main: api.synthia.tech
